<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button">Go!</string>
    <string name="city">City</string>
    <string name="temperature">temperature</string>
    <string name="wind">wind</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="find">Find</string>
    <string name="enter_name">Enter the name of the city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DAY">Day</string>
    <string name="Day">Day</string>
    <string name="Find">Find</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="idk">idk</string>
    <string name="homepage">Homepage</string>

    <string name="main">main</string>
    <string name="favorite">Favorite</string>
    <string name="fragment_navigation">fragment_navigation</string>
    <string name="refresh">Refresh</string>
</resources>